--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <title>Lucky Weds Gowtham</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 </head>
 
 <body>
@@ -32,7 +29,7 @@
     <section id="intro" class="main style1 dark fullscreen">
         <div class="content">
             <header>
-                <h2>Lucky & Gowtham</h2>
+                <h2 class="fancyHeader">Lucky & Gowtham</h2>
             </header>
             <p>On the Way..</p>
             <footer>
@@ -133,8 +130,8 @@
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
-    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/hearts.js"></script>
 </body>
 
 </html>
